fix: simple text z-index

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1010,7 +1010,6 @@ body {
       margin-top: 13rem;
       padding: 1rem;
       background-color: #fff;
-      z-index: 10;
       box-shadow: 0 10px 80px 0 rgba(90,103,114,.1);
         h1 {
             font-size: 2.5rem;
@@ -2153,14 +2152,14 @@ body {
 .line-clamp-2 {
     display: -webkit-box;
     -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;  
+    -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
 .line-clamp-3 {
     display: -webkit-box;
     -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;  
+    -webkit-box-orient: vertical;
     overflow: hidden;
 }
 
